fixed About me section now h1 visible

--- a/resources/css/syle.css
+++ b/resources/css/syle.css
@@ -347,8 +347,7 @@ header {
 /* ------------------------------------------------ */
 
 .section-aboutme {
-    margin-top: 0;
-    padding-top: 25px;
+    padding-top: 80px;
 }
 
 .steps-box {
